# kraken-core

./: .flake8  .kraken.py  404.html  README.md  index.html  pyproject.toml  readme.md  sitemap.xml  vendorize.toml
.changelog/: _unreleased.toml
.github/workflows/: python-package.yml
changelog/: index.html
docs/: build.novella  mkdocs.yml
docs/content/: index.md
docs/project/: index.html
docs/tasks/: index.html
example/: .kraken.py  my_tasks.py
examples/core/: .kraken.py
examples/core-dsl/: .kraken.py
examples/docker/: .kraken.py
search/: search_index.json
src/example/: .kraken.py  my_tasks.py
src/kraken/_vendor/: .gitignore
src/kraken/_vendor/dill/: _shims.py  detect.py  objtypes.py  source.py  temp.py
src/kraken/_vendor/dill/tests/: test_check.py  test_classdef.py  test_detect.py  test_dictviews.py  test_diff.py  test_extendpickle.py  test_fglobals.py  test_file.py  test_functions.py  test_functors.py  test_mixins.py  test_module.py  test_moduledict.py  test_nested.py  test_objects.py  test_properties.py  test_recursive.py  test_restricted.py  test_selected.py  test_session.py  test_source.py  test_temp.py  test_weakref.py
src/kraken/_vendor/networkx/: __init__.py  conftest.py  convert.py  convert_matrix.py  relabel.py
src/kraken/_vendor/networkx/algorithms/: __init__.py  asteroidal.py  bridges.py  chains.py  chordal.py  clique.py  cluster.py  communicability_alg.py  core.py  covering.py  cycles.py  d_separation.py  dag.py  distance_measures.py  distance_regular.py  dominance.py  efficiency_measures.py  euler.py  graphical.py  hierarchy.py  hybrid.py  link_prediction.py  lowest_common_ancestors.py  matching.py  mis.py  moral.py  non_randomness.py  planar_drawing.py  planarity.py  polynomials.py  reciprocity.py  regular.py  richclub.py  similarity.py  simple_paths.py  smallworld.py  smetric.py  sparsifiers.py  structuralholes.py  summarization.py  (+5 more)
src/kraken/_vendor/networkx/algorithms/approximation/: __init__.py  clique.py  clustering_coefficient.py  connectivity.py  kcomponents.py  maxcut.py  ramsey.py  steinertree.py  traveling_salesman.py  treewidth.py
src/kraken/_vendor/networkx/algorithms/assortativity/: __init__.py  connectivity.py  correlation.py  mixing.py  neighbor_degree.py
src/kraken/_vendor/networkx/algorithms/bipartite/: __init__.py  basic.py  centrality.py  cluster.py  covering.py  edgelist.py  generators.py  matching.py  matrix.py  projection.py  redundancy.py
src/kraken/_vendor/networkx/algorithms/centrality/: betweenness.py  betweenness_subset.py  closeness.py  current_flow_betweenness.py  current_flow_betweenness_subset.py  current_flow_closeness.py  (+11 more)
src/kraken/_vendor/networkx/classes/: __init__.py  digraph.py  function.py  graph.py  graphviews.py  multidigraph.py  multigraph.py  reportviews.py
src/kraken/_vendor/networkx/drawing/: layout.py  nx_agraph.py  nx_pydot.py  nx_pylab.py
src/kraken/_vendor/networkx/generators/: atlas.py  classic.py  community.py  degree_seq.py  directed.py  duplication.py  expanders.py  geometric.py  harary_graph.py  internet_as_graphs.py  interval_graph.py  joint_degree_seq.py  lattice.py  line.py  mycielski.py  nonisomorphic_trees.py  random_graphs.py  small.py  social.py  spectral_graph_forge.py  stochastic.py  sudoku.py
src/kraken/_vendor/networkx/linalg/: __init__.py  algebraicconnectivity.py  bethehessianmatrix.py  graphmatrix.py  laplacianmatrix.py  modularitymatrix.py  spectrum.py
src/kraken/_vendor/networkx/readwrite/: __init__.py  adjlist.py  edgelist.py  gexf.py  gml.py  gpickle.py  graph6.py  graphml.py  leda.py  multiline_adjlist.py  nx_shp.py  p2g.py  pajek.py  sparse6.py  text.py
src/kraken/_vendor/networkx/testing/: __init__.py  utils.py
src/kraken/_vendor/networkx/tests/: test_convert.py  test_convert_numpy.py  test_convert_pandas.py  test_convert_scipy.py  test_exceptions.py  test_import.py  test_lazy_imports.py  test_relabel.py
src/kraken/_vendor/networkx/utils/: __init__.py  decorators.py  heaps.py  misc.py  random_sequence.py  rcm.py
src/kraken/_vendor/typeapi/: model.py
src/kraken/api/: __init__.py
src/kraken/cli/: executor.py  main.py  option_sets.py  serialize.py
src/kraken/cli/commands/: base.py  env.py  query.py  run.py
src/kraken/core/: __init__.py  __main__.py  action.py  base.py  build_context.py  build_graph.py  context.py  executor.py  graph.py  loader.py  project.py  property.py  pyenv.py  supplier.py  task.py  tasks.py  utils.py
src/kraken/core/_vendor/: .gitignore
src/kraken/core/_vendor/networkx/: convert.py
src/kraken/core/action/: render_file.py
src/kraken/core/actions/: __init__.py  render_file.py
src/kraken/core/cli/: executor.py  main.py  option_sets.py  serialize.py
src/kraken/core/executor/: __init__.py  colored.py  default.py  utils.py
src/kraken/core/lib/: check_file_contents_task.py  render_file_task.py
src/kraken/core/loader/: __init__.py  pyscript.py  python_script.py
src/kraken/core/loaders/: __init__.py  pyscript.py
src/kraken/core/testing/: __init__.py
src/kraken/core/util/: argparse.py  asciitable.py  fs.py  helpers.py  requirements.py  term.py  text.py
src/kraken/lib/: check_file_contents_task.py  render_file_task.py
src/kraken/re/: address.py  engine.py  exceptions.py  fields.py  rules.py  target.py
src/kraken/re/util/: frozendict.py  repr.py  text.py
src/kraken/test/: __init__.py
src/kraken/testing/: __init__.py  _init__.py
src/kraken/util/: asciitable.py  fs.py  helpers.py  importing.py  json.py  krakenw.py  path.py  requirements.py  text.py
src/tests/: test_project.py  test_properties.py  test_requirements.py  test_task.py  test_task_graph.py
synopsis/: index.html
synopsis/query/: index.html
synopsis/query/describe/: index.html
synopsis/query/env/: index.html
synopsis/query/ls/: index.html
synopsis/query/visualize/: index.html
synopsis/run/: index.html
tests/: conftest.py  test_import.py  test_requirements.py  test_task.py
tests/core/: test_properties.py  test_task.py
tests/std/integration/helm/: test_helm_oci.py
tests/std/integration/python/: test_python.py
(+533 files in other folders)
