[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kraken-core"
version = "0.8.2"
description = ""
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [
    { include = "kraken/cli", from = "src" },
    { include = "kraken/core", from = "src" },
    { include = "kraken/lib", from = "src" },
    { include = "kraken/test", from = "src" },
    { include = "kraken/util", from = "src" },
    { include = "kraken/_vendor", from = "src" },
]
classifiers = []
keywords = []

[tool.poetry.urls]
# "Bug Tracker" = ""
# Documentation = ""
# Homepage = ""
# Repository = ""

[tool.poetry.dependencies]
python = "^3.7"
dill = ">=0.3.5"
pytest = { version = ">=6.0.0", optional = true }
setuptools = ">=33.1.0"
typing-extensions = ">=3.10.0.2"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
types-setuptools = "^57.4.18"

[tool.poetry.extras]
testing = ["pytest"]
docs = ["mkdocs", "mkdocs-material", "novella==0.2.3"]

[tool.poetry.plugins."pytest11"]
"kraken.test" = "kraken.test"

[tool.poetry.scripts]
kraken = "kraken.cli.main:main"

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src/"
pytest = "pytest src/tests/ -vv"
black = "black --check src/"
isort = "isort --check-only src/"
flake8 = "flake8 src/"

[tool.slap.run]
fmt = "black src/ && isort src/"
"docs:build" = "cd docs && novella --base-url kraken-cli/"
"docs:dev" = "cd docs && novella --serve"
"vendorize" = """
set -euxo pipefail
python-vendorize
mv src/kraken/_vendor/termcolor-stubs/__init__.pyi src/kraken/_vendor/termcolor.pyi
rm -r src/kraken/_vendor/termcolor-stubs
"""

[tool.mypy]
python_version = "3.7"
explicit_package_bases = true
exclude = [ "src/kraken/_vendor" ]
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "kraken._vendor.networkx.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kraken._vendor.termcolor.*"
ignore_errors = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
skip = "src/kraken/_vendor"

[tool.black]
line-length = 120
exclude = "src/kraken/_vendor"
